Performance improvements, new queries